# QingYu

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.en.md  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  editor-markdown.yml  feature-request.yml  installation.yml
.github/workflows/: ci.yml  desktop.yml  release.yml
.hallmark/: log.json
.superpowers/sdd/: app-sync-task-2-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  build_support.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: main.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/macos-locales/de.lproj/: InfoPlist.strings
apps/desktop/src-tauri/macos-locales/zh-Hans.lproj/: InfoPlist.strings
apps/desktop/src-tauri/macos-locales/zh-Hant.lproj/: InfoPlist.strings
apps/desktop/src-tauri/src/: app_logs.rs  app_settings.rs  atomic_noreplace.rs  builder_boundary_tests.rs  desktop_runtime.rs  language.rs  lib.rs  managed_workspace.rs  markdown_files.rs  menu.rs  mobile_back.rs  mobile_platform_config_tests.rs  mobile_runtime.rs  notebook_scope.rs  opened_files.rs  primary_workspace.rs  protected_paths.rs  remote_sync.rs  s3_http.rs  shell_command.rs  storage_capability.rs  sync_config.rs  sync_validation.rs  watcher.rs  web_http.rs  windows.rs  workspace_membership.rs
apps/desktop/src-tauri/src/markdown_files/: attachment.rs  document.rs  history.rs  ignore_rules.rs  image.rs  open.rs  path.rs  resource.rs  resource_writer.rs  search.rs  service.rs  tree.rs  trusted_file.rs  types.rs
apps/desktop/src-tauri/src/mcp/: audit.rs  bridge.rs  config.rs  confirmation.rs  error.rs  handles.rs  ipc.rs  local_settings.rs  mod.rs  policy.rs  recycle.rs  server.rs  tests.rs  workspaces.rs
apps/desktop/src-tauri/src/mcp/tools/: document.rs  mod.rs  settings.rs  sync.rs  workspace.rs
apps/desktop/src-tauri/src/menu_labels/: de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  ko.rs  mod.rs  pt_br.rs  ru.rs  zh_cn.rs  zh_tw.rs
apps/desktop/src-tauri/src/remote_sync/: backend.rs  catalog.rs  diagnostics.rs  engine.rs  live_tests.rs  mcp_service.rs  s3_backend.rs  scope.rs  service.rs  settings_scope.rs
apps/desktop/src-tauri/src/sync_config/: editing.rs  model.rs  status.rs  storage.rs
apps/desktop/src-tauri/src/themes/: activation.rs  activation_cleanup.rs  archive.rs  catalog.rs  manifest.rs  migration.rs  mod.rs  parser.rs  resources.rs
apps/desktop/src-tauri/src/watcher/: directory.rs
apps/desktop/src-tauri/src/windows/: settings_ownership.rs
apps/site/: index.html  package.json  tsconfig.test.json  vite.config.ts
apps/web/: index.html  package.json
docs/: privacy.md  qingyu-mcp.md  theme-authoring.md
docs/testing/: qingyu-application-sync-desktop-acceptance.md  qingyu-mobile-native-acceptance.md  qingyu-mobile-native-results.md  s3-sync-desktop-acceptance.md  s3-sync-minio.md  s3-sync-test-report-template.md
scripts/: test-s3-sync-live.mjs
scripts/release/: create-macos-open-helper.mjs  (+18 more)
(+220 files in other folders)
